@@ -24,6 +24,7 @@ TRUNK
   - Public rooms can only be created by local users (parent host) by default
     - muc_room_allow_public = false restricts to admins
 - Commands to show occupants and affiliations in the Shell
+- Save 'reason' text supplied with affiliation change
 
 ### Security and authentication
 
